paragraph and emojie added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <img src="./me1.jpg" alt="avatar" class="header__avatar" />
       <h1 class="header__title">Alexandra Putivskaya</h1>
       <h3 class="header__subtitle">Your next QA engineer</h3>
+      <p>QA Engineer</p>
     </header>
     <main>
       <section class="links">
