--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </section>
     </main>
     <footer>
-      <button type = "button" class="button-link" href=""> Click me </button>
+      <button type = "button" class="button-link" href=""> Click me <p><span>&#9757;</span></p></button>
     </footer>
     <script type="text/javascript" src="js.js"></script>
   </body>
